Added preconnect because lighthouse told me to haha

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DracoFAAD</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <link rel="stylesheet" href="./css/main/pages/index.css">
     <link rel="stylesheet" href="./css/main/pages/contact.css">
     <link rel="shortcut icon" href="./images/DracoIcon.jpg" type="image/x-icon">
