--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio of DracoFAAD : A developer.">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <title>DracoFAAD</title>
     <link rel="stylesheet" href="./css/main/pages/index.css">
     <link rel="shortcut icon" href="./images/DracoIcon.jpg" type="image/x-icon">
