added alt to language selector

--- a/base.html
+++ b/base.html
@@ -37,7 +37,7 @@
         </div>
         <div class="navigationLanguageSelector">
             <button onclick="onNavigationLanguageButtonClick()" class="navigationLanguageButton">
-                <img src="images/language.png" alt="" class="navigationLanguageButtonIcon">
+                <img src="images/language.png" alt="Language Selector" class="navigationLanguageButtonIcon">
             </button>
             <div id="navigationLanguagePopup" class="hidden navigationLanguagePopup">
                 <button onclick="changeLanguage('en_us')">English</button>
