--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
         </div>
         <div class="navigationMenuIconContainer">
             <button class="navigationMenuButton" id="navigationMenuButton">
-                <img src="images/menu.png" alt="" class="navigationMenuButtonIcon">
+                <img src="images/menu.png" alt="Language Selector" class="navigationMenuButtonIcon">
             </button>
         </div>
         <script>
