--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             </div>
         </div>
         <div class="navigationLanguageSelector">
-            <button onclick="onNavigationLanguageButtonClick()" class="navigationLanguageButton">
-                <img src="images/language.png" alt="" class="navigationLanguageButtonIcon">
+            <button  onclick="onNavigationLanguageButtonClick()" class="navigationLanguageButton">
+                <img src="images/language.png" alt="Language Selector" class="navigationLanguageButtonIcon">
             </button>
             <div id="navigationLanguagePopup" class="hidden navigationLanguagePopup">
                 <button onclick="changeLanguage('en_us')">English</button>
